// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GTextarea should match snapshot when show is prop is given as false  1`] = `
<div>
  <div
    class="g-field-wrapper -borderline big"
  >
    <!---->
     
    <div
      class="content"
    >
      <textarea />
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`GTextarea should render current progress area if showProgress prop is given 1`] = `
<div
  maxlength="3"
>
  <div
    class="g-field-wrapper -borderline -top big"
  >
    <!---->
     
    <div
      class="content"
    >
      <textarea
        maxlength="3"
      />
       
      <!---->
    </div>
     
    <div
      class="bottom-wrapper g-d-justify-end"
    >
      <!---->
       
      <div
        class="bottom-right-wrapper"
      >
        <div
          class="g-d-flex"
        >
          <div
            class="g-text-red-500 -caption g-text"
          >
            
        3
      
          </div>
           
          <div
            class="g-text-main-grey-500 -caption g-text"
          >
            
        /
      
          </div>
           
          <div
            class="g-text-main-grey-500 -caption g-text"
          >
            
        3
      
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GTextarea should render max length progress area if showProgress prop is given 1`] = `
<div>
  <div
    class="g-field-wrapper -borderline big"
  >
    <!---->
     
    <div
      class="content"
    >
      <textarea />
       
      <!---->
    </div>
     
    <div
      class="bottom-wrapper g-d-justify-end"
    >
      <!---->
       
      <div
        class="bottom-right-wrapper"
      >
        <div
          class="g-d-flex"
        >
          <div
            class="g-text-green-500 -caption g-text"
          >
            
        0
      
          </div>
           
          <div
            class="g-text-main-grey-500 -caption g-text"
          >
            
        /
      
          </div>
           
          <div
            class="g-text-main-grey-500 -caption g-text"
          >
            
        ∞
      
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
